@@ -1,5 +1,6 @@
 2012-2-x
-
+Bugfix: Adde brevity penalty for RIBES
+Bugfix: Do not read oracles when learning by xBLEU
 
 2012-2-15
 Added MIRA-like optimization for PRO-style learning
